[package]
name = "maturaTestLol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
bevy = "0.14.0"
bevy_rapier3d = { version = "0.27.0", features = [ "simd-stable", "parallel" ] }
dae-parser = "0.10.0"
bevy_panorbit_camera = "0.19.1"